--- a/cmd/pom.xml
+++ b/cmd/pom.xml
@@ -95,6 +95,7 @@
 						<manifestEntries>
 							<version>${project.version}</version>
 		                	<Multi-Release>true</Multi-Release>
+		                	<Build-Time>${maven.build.timestamp}</Build-Time>
 						</manifestEntries>
 					</archive>
 				</configuration>
