--- a/assembly/src/main/assembly/package.xml
+++ b/assembly/src/main/assembly/package.xml
@@ -61,9 +61,7 @@
     <directory>../fichiers/données</directory>
     <outputDirectory>./données</outputDirectory>
     <excludes>
-        <exclude>*.xml</exclude>
-        <exclude>*.xls</exclude>
-        <exclude>*.xlsx</exclude>
+        <exclude>*.*</exclude>
       </excludes>
   </fileSet>
 </fileSets>
