--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.leplan73</groupId>
 	<artifactId>outilssgdf</artifactId>
-	<version>1.0.4-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<url>https://github.com/sbouchex/outilssgdf</url>
     <licenses>
         <license>
@@ -14,7 +14,7 @@
     </licenses>
     <scm>
     <developerConnection>scm:git:https://github.com/sbouchex/outilssgdf.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>1.1.0</tag>
   </scm>
 	<packaging>pom</packaging>
 	<properties>
