--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>outilssgdf</artifactId>
-		<version>1.1.0</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>assembly</artifactId>
 	<packaging>pom</packaging>
