--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,14 @@
 		<jsoup.version>1.12.1</jsoup.version>
 		<jaxen.version>1.2.0</jaxen.version>
 		<json-path.version>2.4.0</json-path.version>
-		<swagger.version>1.5.21</swagger.version>
+		<swagger.version>1.5.24</swagger.version>
 		<jersey-guava.version>2.6</jersey-guava.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<el-ri.version>1.0</el-ri.version>
 		<jcabi.version>1.1</jcabi.version>
 		<logback.version>1.2.3</logback.version>
 		<influxdb.version>2.15</influxdb.version>
+		<h2.version>1.4.199</h2.version>
 	</properties>
 	<modules>
 		<module>servlet</module>
