--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>outilssgdf</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0-beta1</version>
 	</parent>
 	<artifactId>gui</artifactId>
 	<name>gui</name>
