--- a/embeddedtomcat/pom.xml
+++ b/embeddedtomcat/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>outilssgdf</artifactId>
-		<version>1.3.0-beta2</version>
+		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>embeddedtomcat</artifactId>
 	<name>embeddedtomcat</name>
