--- a/common/pom.xml
+++ b/common/pom.xml
@@ -105,6 +105,12 @@
 	    <groupId>net.sourceforge.htmlunit</groupId>
 	    <artifactId>htmlunit</artifactId>
 	    <version>${htmlunit.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
 	</dependency>
 	</dependencies>
 	<build>
