--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         </license>
     </licenses>
     <scm>
-    <developerConnection>scm:git:https://github.com/sbouchex/outilssgdf.git</developerConnection>
+    <developerConnection>scm:git:https://github.com/outilssgdf/outilssgdf.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 	<packaging>pom</packaging>
@@ -62,6 +62,8 @@
     <artifactId>maven-release-plugin</artifactId>
     <configuration>
         <tagNameFormat>@{project.version}</tagNameFormat>
+        <localCheckout>true</localCheckout>
+        <pushChanges>false</pushChanges>
     </configuration>
 </plugin>
 </plugins>
