--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -64,7 +64,7 @@
 				<version>3.2.1</version>
 				<executions>
 					<execution>
-						<phase>install</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>shade</goal>
 						</goals>
