--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>outilssgdf</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0-beta3</version>
 	</parent>
 	<artifactId>gui</artifactId>
 	<name>gui</name>
@@ -70,12 +70,10 @@
 						</goals>
 						<configuration>
 							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>org.leplan73.outilssgdf.gui.OutilsSGDF</mainClass>
 								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 							</transformers>
 							<finalName>outilssgdf-gui</finalName>
 						</configuration>
