--- a/guilauncher/pom.xml
+++ b/guilauncher/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.leplan73</groupId>
     <artifactId>analytiscout</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0-beta4</version>
   </parent>
   <artifactId>guilauncher</artifactId>
 	<name>guilauncher</name>
