--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.leplan73</groupId>
 	<artifactId>analytiscout</artifactId>
-	<version>1.3.0-beta4</version>
+	<version>1.3.0-SNAPSHOT</version>
 	<url>https://github.com/outilssgdf/analytiscout</url>
     <licenses>
         <license>
@@ -14,7 +14,7 @@
     </licenses>
     <scm>
     <developerConnection>scm:git:https://github.com/analytiscout/analytiscout.git</developerConnection>
-    <tag>1.3.0-beta4</tag>
+    <tag>HEAD</tag>
   </scm>
 	<packaging>pom</packaging>
 	<properties>
