--- a/cmd/pom.xml
+++ b/cmd/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>analytiscout</artifactId>
-		<version>1.3.0</version>
+		<version>1.4.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>cmd</artifactId>
 	<name>cmd</name>
