--- a/analytiscout-cmd/pom.xml
+++ b/analytiscout-cmd/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>analytiscout</artifactId>
-		<version>1.4.2-SNAPSHOT</version>
+		<version>1.4.2</version>
 	</parent>
 	<artifactId>analytiscout-cmd</artifactId>
 	<dependencies>
