--- a/analytiscout-cmd/pom.xml
+++ b/analytiscout-cmd/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>analytiscout</artifactId>
-		<version>1.4.5</version>
+		<version>1.5.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>analytiscout-cmd</artifactId>
 	<dependencies>
