--- a/analytiscout-common/pom.xml
+++ b/analytiscout-common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>analytiscout</artifactId>
-		<version>1.4.6</version>
+		<version>1.5.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>analytiscout-common</artifactId>
 	<packaging>jar</packaging>
